# checkers-online

./: .gitignore  INSTALLATION.md  README.md  install  uninstall
.github/workflows/: cmake.yml  macos.yml  ubuntu.yml  windows.yml
Client/: CMakeLists.txt  main.c
Client/conf/: con-config.txt  con.conf
Client/desk/: desk_matr.txt
Client/modules/: FindSDL2.cmake
Client/src/: game_proc.h  gameplay.c  gameplay.h  gui.c  gui.h  main.c  network.c  network.h  packer.c  packer.h  ui.c  ui.h
Client/src/include/: gameplay.h  gui.h  network.h  packer.h
Server/: CMakeLists.txt  main  main.c  test  test.c
Server/desk/: desk.txt
Server/src/: main.c  network.c  network.h  packer.c  packer.h
Server/src/include/: network.h  packer.h
